// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fontLanguageOverride renders 0 1`] = `
Array [
  .c0 {
  font-language-override: 0;
}

<div
    className="c0"
  />,
  .c0 {
  font-language-override: 0;
}

<div
    className="c0"
  />,
  .c0 {
  font-language-override: 0;
}

<div
    className="c0"
  />,
  .c0 {
  font-language-override: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`fontLanguageOverride renders function 1`] = `
Array [
  .c0 {
  font-language-override: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  font-language-override: has;
}

<div
    className="c0"
  />,
  .c0 {
  font-language-override: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  font-language-override: has;
}

<div
    className="c0"
  />,
]
`;

exports[`fontLanguageOverride renders invalid theme path 1`] = `
Array [
  .c0 {
  font-language-override: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  font-language-override: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  font-language-override: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  font-language-override: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`fontLanguageOverride renders negative number 1`] = `
Array [
  .c0 {
  font-language-override: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  font-language-override: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  font-language-override: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  font-language-override: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`fontLanguageOverride renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  font-language-override: July;
}

@media screen and (min-width:November) {
  .c0 {
    font-language-override: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-language-override: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-language-override: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    font-language-override: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  font-language-override: July;
}

@media screen and (min-width:November) {
  .c0 {
    font-language-override: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-language-override: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-language-override: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    font-language-override: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  font-language-override: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    font-language-override: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-language-override: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-language-override: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    font-language-override: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  font-language-override: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    font-language-override: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-language-override: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-language-override: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    font-language-override: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`fontLanguageOverride renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    font-language-override: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-language-override: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-language-override: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    font-language-override: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    font-language-override: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-language-override: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-language-override: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    font-language-override: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    font-language-override: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-language-override: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-language-override: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    font-language-override: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    font-language-override: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-language-override: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-language-override: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    font-language-override: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`fontLanguageOverride renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  font-language-override: July;
}

@media May {
  .c0 {
    font-language-override: August;
  }
}

@media April {
  .c0 {
    font-language-override: September;
  }
}

@media January {
  .c0 {
    font-language-override: November;
  }
}

@media April {
  .c0 {
    font-language-override: August;
  }
}

@media June {
  .c0 {
    font-language-override: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  font-language-override: July;
}

@media May {
  .c0 {
    font-language-override: August;
  }
}

@media April {
  .c0 {
    font-language-override: September;
  }
}

@media January {
  .c0 {
    font-language-override: November;
  }
}

@media April {
  .c0 {
    font-language-override: August;
  }
}

@media June {
  .c0 {
    font-language-override: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  font-language-override: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    font-language-override: November;
  }
}

@media April {
  .c0 {
    font-language-override: January;
  }
}

@media January {
  .c0 {
    font-language-override: December;
  }
}

@media April {
  .c0 {
    font-language-override: April;
  }
}

@media June {
  .c0 {
    font-language-override: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  font-language-override: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    font-language-override: November;
  }
}

@media April {
  .c0 {
    font-language-override: January;
  }
}

@media January {
  .c0 {
    font-language-override: December;
  }
}

@media April {
  .c0 {
    font-language-override: April;
  }
}

@media June {
  .c0 {
    font-language-override: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`fontLanguageOverride renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    font-language-override: July;
  }
}

@media April {
  .c0 {
    font-language-override: August;
  }
}

@media January {
  .c0 {
    font-language-override: September;
  }
}

@media April {
  .c0 {
    font-language-override: November;
  }
}

@media June {
  .c0 {
    font-language-override: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    font-language-override: July;
  }
}

@media April {
  .c0 {
    font-language-override: August;
  }
}

@media January {
  .c0 {
    font-language-override: September;
  }
}

@media April {
  .c0 {
    font-language-override: November;
  }
}

@media June {
  .c0 {
    font-language-override: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    font-language-override: January;
  }
}

@media April {
  .c0 {
    font-language-override: December;
  }
}

@media January {
  .c0 {
    font-language-override: April;
  }
}

@media April {
  .c0 {
    font-language-override: May;
  }
}

@media June {
  .c0 {
    font-language-override: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    font-language-override: January;
  }
}

@media April {
  .c0 {
    font-language-override: December;
  }
}

@media January {
  .c0 {
    font-language-override: April;
  }
}

@media April {
  .c0 {
    font-language-override: May;
  }
}

@media June {
  .c0 {
    font-language-override: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`fontLanguageOverride renders postitive number 1`] = `
Array [
  .c0 {
  font-language-override: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  font-language-override: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  font-language-override: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  font-language-override: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`fontLanguageOverride renders string 1`] = `
Array [
  .c0 {
  font-language-override: July;
}

<div
    className="c0"
  />,
  .c0 {
  font-language-override: July;
}

<div
    className="c0"
  />,
  .c0 {
  font-language-override: June;
}

<div
    className="c0"
  />,
  .c0 {
  font-language-override: June;
}

<div
    className="c0"
  />,
]
`;

exports[`fontLanguageOverride renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`fontLanguageOverride renders valid theme path 1`] = `
Array [
  .c0 {
  font-language-override: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  font-language-override: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  font-language-override: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  font-language-override: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
